# cmake-example

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h
